get(0) and null variable change implement